<resources>
    <string name="app_name">笔记本</string>
    <string name="note_title_hint">请输入标题，最大10个字</string>
    <string name="note_content_hint">请输入内容，最大300个字</string>
    <string name="settings">设置</string>
    <string name="notepad">笔记</string>
    <string name="new_note">写笔记</string>
    <string name="password">请输入密码</string>
    <string name="password_hint">密码</string>
    <string name="see_password">显示密码</string>
    <string name="login">进入</string>
    <string name="no_password_hint">未设置密码，可直接点击进入</string>
    <string name="title_activity_setting">设置</string>
    <string name="his_password">已设置密码</string>
    <string name="his_not_password">未设置密码</string>
    <string name="setting_password">设置密码锁</string>
    <string name="settings_password">密码设置</string>
    <string name="password_check">请输入密码</string>
    <string name="save_password_mode">savepassword</string>
    <string name="hint">提示</string>
    <string name="hint_set_password">是否设置密码？注意：本程序无密码找回功能</string>
    <string name="hint_dle_password">是否关闭密码锁，这将删除密码</string>
    <string name="agree">确定</string>
    <string name="disagree">取消</string>
    <string name="fingerprint">可使用指纹</string>
    <string name="fingerprint_permission">没有指纹权限</string>
    <string name="fingerprint_fail">指纹识别失败</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_is_wrong">密码错误</string>
    <string name="password_maxlength">设置密码(最大8位)</string>
    <string name="content_null">内容不能为空</string>
    <string name="delete">删除</string>
    <string name="delete_hint">确定要删除吗?</string>
    <string name="saved">保存完成</string>
    <string name="no_saved">未保存，是否保存</string>
    <string name="theme">主题</string>
    <string name="set_theme">设置主题</string>
    <string name="magenta">蓝</string>
    <string name="red">红</string>
    <string name="pink">粉</string>
    <string name="yellow">黄</string>
    <string name="totxt">导出</string>
    <string name="txtyes">导出成功</string>
    <string name="txtno">无内容可供导出</string>
    <string name="totxt1">导出为TXT</string>
</resources>
